mobile menu updated

--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,17 @@ header button{
     border-radius: 20px;
     font-size: 20px;
 }
-.logo{
+.logo > div{
     display: flex;
+    gap: 20px;
+    align-items: center;
 }
 .logo img{
     width: 100px;
     height: 100px;
    }
    .logo span{
-    font-size: 40px;
+    font-size: 30px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    }
 .top-search > input{
@@ -161,5 +163,17 @@ footer .footer-row ul{
     flex-direction: column;
     gap: 20px;
     color: white;
+}
+.mobile-menu{
+    display: none !important;
+}
+.active{
+    display: block;
+}
+header .close {
+    display: none;
+}
+.d-block{
+    display: block !important;
 }
 
