--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,76 @@
     }
 }
 @media only screen and (max-width: 1000px){
+  .mobile-menu-overflow{
+height: 100%;
+width: 100%;
+position: absolute;
+background-color:rgb(181, 181, 181);
+top: 0;
+opacity: 0.5;
+display: none;
+
+  }
+    header .logo{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+    }
+    header nav{
+       opacity: 0;
+       display: none;
+       transition: 0.5s;
+    }
+    header nav hr, header nav br{
+        display: none;
+    }
+    .full-opacity{
+        opacity: 1;
+      
+    }
+    header nav ul{
+        flex-direction: column;
+        padding: left;
+        padding-top: 20px;
+    }
+    header nav ul li:hover{
+        border: none;
+    }
+
+    header nav .container{
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 70%;
+        background-color: white;
+        height: 100vh;
+        z-index:1 ;
+        opacity: 1;
+    }
+    header nav .close{
+display: flex;
+justify-content: end;
+margin: 20px;
+font-size: 35px;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: bold;
+cursor: pointer;
+    } 
+    header nav .close .icone{
+        padding: 20px;
+    }
+    header nav ul li{
+     border: none;  
+     text-align: left; 
+    }
+ 
+    .mobile-menu{
+        display: block !important;
+    }
+    .mobile-menu>svg{
+        transform: scale(2.0);
+    }
 header>.container > .header-main{
     flex-direction: column;
     align-items: center;
@@ -15,7 +85,7 @@ header>.container > .header-main{
 header>.container > .header-main .info {
     flex-direction: column-reverse;
 }
-header>.container > .header-main .logo, header>.container > .header-main .info {
+ header>.container > .header-main .info {
 justify-content: center;
 
 }
